--- a/lab1/bai4.html
+++ b/lab1/bai4.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         let classRoom = [
-            "Vũ Tiến Việt",
-            "Bàn Văn Việt",
-            "Vũ Văn Việt",
-            "Vũ Minh Việt",
-            "Thầy Vũ Anh Tú",
+            "Nguyễn Hữu Hải",
+            "Trần Mai Linh",
+            "Lê Minh Quân",
+            "Phạm Thị Lan Hương",
+            "Võ Minh Dương",
+            "Nguyễn Thị Hồng Thảo",
+            "Lý Hoàng Anh",
+            "Trần Văn Thành Đức"
         ];
-        //tách riêng họ và tên
-   
 
-        let separatedNames = classRoom.map(fullName => {
-            let parts = fullName.trim().split(/\s+/);
-            return { lastName: parts[0], firstName: parts.slice(1).join(' ') };
+        // Câu 1: Tách họ và tên riêng
+        const names = classRoom.map((fullName) => {
+            const [ho, ...tens] = fullName.split(' ');
+            const ten = tens.join(' ')
+            return { ho, ten };
         });
 
-        classRoom();
-    </script>
+        console.log(names);
 
+        // Câu 2: Thêm một sv vào một vị trí bất kỳ trong mảng
+        const addSv = classRoom.push('Nguyễn Đình Bắc')
+        console.log(classRoom);
+
+        // Câu 3: Xoá một sinh viên khỏi mảng
+        const deleteSv = classRoom.splice(2, 1)
+        console.log(classRoom);
+
+        // Câu 4: Tìm kiếm theo tên, không chứa dấu
+        const find = classRoom.map((names) => {
+            const fullName = names.split(' ');
+            const name = fullName[fullName.length - 1]
+            const filter = name.replace(/[\u0300-\u036f]/g, '')
+            console.log(filter);
+        })
+    </script>
 </body>
+
 </html>
